# A_maze_ing

./: .gitignore  Errors.py  Logs.py  Makefile  README.md  a_maze_ing.py  config.txt  config_parsing.py  default_config.txt  main.py  maze.txt  maze_config.py  maze_generator.py  maze_solver.py  maze_terminal.py  mazegen-1.0.0-py3-none-any.whl  mazegen.py  output.txt  pygame_maze.py  pyproject.toml  requirements.txt  settings.txt  terminal_maze.py  test_mazegen.py
Config/: Config.py  GameState.py  ParserConfig.py  ThemeManager.py  __init__.py  themes.json
Maze/: Cell.py  Maze.py  Output.py  __init__.py  logo_42.py
Maze/algo/: AStar.py  Dfs.py  __init__.py
algo/: A_Star.py  Dfs.py  __init__.py
config/: Config.py  ConfigChecker.py  __init__.py
display/: Display.py  __init__.py
maze/: Cell.py  Maze.py  Output.py  __init__.py
player/: Player.py  __init__.py
render/: Render.py  RenderBloc.py  RenderButtons.py  RenderDiv.py  RenderObj.py  RenderText.py  __init__.py  terminal.py
windows/: Windows.py
